<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.beemathangarani.attendancetracker.LoginActivity">
    <EditText
        style="@style/EditorFieldStyle"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/mail_editText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/EditorFieldStyle"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password_editText"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/mail_editText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/mail_editText" />

    <Button
        style="@style/buttonStyle"
        android:background="@color/buttonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        android:id="@+id/SignIn_button"
        android:onClick="onSignIn"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/NoAccount_TextView"
        android:layout_alignStart="@+id/NoAccount_TextView" />

    <TextView

        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/register"
        android:onClick="onNoAccount"
        android:id="@+id/NoAccount_TextView"
        android:layout_below="@+id/SignIn_button"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
