<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:background="@color/backgroundBlue"
    tools:context="com.example.beemathangarani.attendancetracker.TakeAttendanceActivity">

    <EditText
        style="@style/EditorFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cls"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:hint="@string/Class"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        style="@style/EditorFieldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subject"
        android:layout_below="@+id/cls"
        android:layout_marginTop="35dp"
        android:hint="@string/Subject"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/cls" />

    <Button
        style="@style/buttonStyle"
        android:background="@color/buttonColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/take"
        android:id="@+id/take"
        android:layout_below="@+id/subject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />
</RelativeLayout>
